--- a/examples/v2beta1/tensorflow-benchmarks/Dockerfile
+++ b/examples/v2beta1/tensorflow-benchmarks/Dockerfile
@@ -13,6 +13,7 @@ WORKDIR "/tensorflow/benchmarks"
 
 ARG port=2222
 RUN sed -i "s/[ #]\(.*Port \).*/ \1$port/g" /etc/ssh/ssh_config && \
-    sed -i "s/#\(Port \).*/\1$port/g" /etc/ssh/sshd_config
+    sed -i "s/#\(Port \).*/\1$port/g" /etc/ssh/sshd_config && \
+    sed -i "s/UsePAM yes/UsePAM no/g" /etc/ssh/sshd_config
 
 CMD ["/bin/bash"]
